# OpenANPR

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  README.md  charExtraction.cpp  charExtraction.cpp~  charExtraction.h  charExtraction.h~  main.cpp  segmentation.cpp  segmentation.cpp~  segmentation.h  segmentation.h~
CharNet/: char_net.prototxt  lenet_char.prototxt  lenet_solver_char.prototxt
CharNet/test_char_lmdb/: lock.mdb
CharNet/train_char_lmdb/: lock.mdb
DetectNet/: get_weight_file.sh  obj.data  obj.names
distribute/src/: arapaho.hpp  convolutional_layer.c
libs/: liblept.so.3.0.0  libopencv_core.so.2.4.13  libopencv_highgui.so.2.4.13  libopencv_imgproc.so.2.4.13
num_plates/040603/: ANPR  Thumbs.db  convertor.sh  dir.sh  directory.py  image.py
num_plates/070603/: Thumbs.db
num_plates/141002/: Thumbs.db
num_plates/170902/: Thumbs.db
num_plates/180902/: Thumbs.db
num_plates/210503/: Thumbs.db
num_plates/280503/: Thumbs.db
src/: charExtraction.cpp  charExtraction.h  charRecognition.cpp  charRecognition.h  main.cpp  segmentation.cpp  segmentation.h
